crates/carta/tests/snapshots/golden_e2e__rst__native__substitution-unicode-codes.snap
---
source: crates/carta/tests/golden_e2e.rs
expression: output
---
[ Para
    [ Str "A"
    , Space
    , Str "dash"
    , Space
    , Str "\8212"
    , Str ","
    , Space
    , Str "a"
    , Space
    , Str "decimal"
    , Space
    , Str "8212"
    , Str ","
    , Space
    , Str "a"
    , Space
    , Str "sign"
    , Space
    , Str "\169"
    , Str ","
    , Space
    , Str "a"
    , Space
    , Str "pair"
    , Space
    , Span ( "" , [] , [] ) [ Str "A" , Space , Str "B" ]
    , Str ","
    , Space
    , Str "and"
    , Space
    , Str "an"
    , Space
    , Str "escape"
    , Space
    , Str "\8212"
    , Str "."
    ]
]
