crates/carta/tests/snapshots/golden_e2e__rst__native__substitution-unicode-comment.snap
---
source: crates/carta/tests/golden_e2e.rs
expression: output
---
[ Para
    [ Str "Copyright"
    , Space
    , Str "\169"
    , Space
    , Str "holders."
    ]
]
