crates/carta/tests/snapshots/golden_e2e__rst__native__substitutions-undefined.snap
---
source: crates/carta/tests/golden_e2e.rs
expression: output
---
[ Para
    [ Str "This"
    , Space
    , Str "paragraph"
    , Space
    , Str "references"
    , Space
    , Str "an"
    , Space
    , Link
        ( "" , [] , [] )
        [ Str "|undefined|" ]
        ( "##SUBST##|undefined|" , "" )
    , Space
    , Str "substitution"
    , Space
    , Str "that"
    , Space
    , Str "is"
    , Space
    , Str "never"
    , Space
    , Str "declared."
    ]
]
